--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-dj-database-url==0.4.2
-Django==1.11.6
-django-widget-tweaks==1.4.1
-Markdown==2.6.9
-python-decouple==3.1
+Django==3.1
+asgiref==3.2.10
+# dj-database-url==0.5.0
+django-widget-tweaks==1.4.8
+Markdown==3.2.2
+# python-decouple==3.3
